# sympy

./: .gitattributes  .gitignore  .project  README.md  axiom.php  config.ini  console.py  index.html  index.php  main.py  pull.sh  requirements.txt  run.py  run.sh  run_linux.py  setup.bat  setup.cfg  setup.py  setup.sh  utility.js  utility.php
axiom/: .gitignore  __init__.py  hierarchy.php  index.css  index.html  index.php  insurmountable.txt  plausibles.py  prove.py  render.php  request.php  search.php  search.py  searchBox.php  unprovable.txt  utility.js  utility.php  utility.py  wolfram.py
blueprint/: debug.py  mysql.py  system.py
css/: codemirror.css  style.css
doc/: Makefile  README.rst  apidoc.conf  generate_logos.py
examples/: README  all.py
js/: folderView.js  new.js  render.js  std.js  utility.js
lean/: __init__.py  test.py
php/: console.php  folderView.php  hierarchy.php  infix.php  mysql.php  new.php  package.php  python.php  render.php  request.php  search.php  searchBox.php  std.php  summary.php  symbol.php  sympy.php  theorem.php  utility.php
release/: .gitignore  Dockerfile  README.md  fabfile.py  pull_and_run_rever.sh  release.sh  rever.xsh
sh/: secure.sh  unsecure.sh
sympy/: __init__.py  abc.py  conftest.py  galgebra.py  release.py  this.py  utility.py
templates/: console.html  main.html  module.html
tensorflow/: __init__.py  linalg.py  losses.py  math.py  ops.py
util/: MySQL.py  __init__.py  console.py  cpp.py  function.py  hierarchy.py  hint.py  search.py  std.py  suggest.py  summary.py  test.py  timestamp.py  utility.py
(+10814 files in other folders)
