[metadata]
name = sympy.keras
version = 1.0.26
author = Cosmos
author_email = 744984949@qq.com
long_description = file: README.md
url = https://github.com/cosmosZhou/sympy
license = MIT
classifiers = 
    Programming Language :: Python :: 3.11


[options]
packages = find:
install_requires = 
	mpmath
	std.algorithm
